fix Tile layout on narrow width viewports
CSS grids are more flexible that I even realised. I can set general
minmax values and let the browser calculate how many columns are needed,
and let it decide the number of rows itself.

This fixes the unreadable text, and hard to view Tiles when docking the
app to the left/right during use.

--- a/src/app/features/catalogue/components/home/home.component.css
+++ b/src/app/features/catalogue/components/home/home.component.css
@@ -1,15 +1,15 @@
 :host {
-  padding: 3rem 3rem 0; /* <1> */
+  box-sizing: border-box; /* <1> */
   display: flex;
   flex-direction: column;
   height: 100%; /* <1> */
-  box-sizing: border-box; /* <1> */
+  padding: 3rem 3rem 0; /* <1> */
 }
 
 div {
-  flex-shrink: 0; /* <1> */
   background: var(--palette-bg-darker);
   display: flex;
+  flex-shrink: 0; /* <1> */
   grid-column: span 4;
   grid-row: 1;
   height: 3rem;
@@ -23,14 +23,13 @@ div {
 }
 
 section {
-  flex-grow: 1; /* <1> */
   display: grid;
+  flex-grow: 1; /* <1> */
   grid-column-gap: 2rem;
   grid-row-gap: 1rem;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr;
-  padding-bottom: 1rem; /* <1> */
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); /* <2> */
   overflow-y: auto;
+  padding-bottom: 1rem; /* <1> */
 }
 
 /* <1> Scrolling Layout
@@ -41,5 +40,12 @@ as large as possible (while preserving the size needed for the Control bar).
 
 We need to use border-box sizing so the padding and border sizes for the elements are included in the calculation for its
 height. If we do not do this the app itself will scroll because it will be of 100vh + margin/padding in height.
+
+*/
+
+/* <2> Reactive Grids
+
+Fill up the width allowed with as many columns as appropriate,
+with the restriction that a column must be at least 15rem wide (sufficient to display most titles comfortably).
 
 */
